Using java 17 features