@@ -48,7 +48,7 @@ public class StreamGuzzler implements Runnable {
     public void run() {
         Objects.requireNonNull(stream, "Cannot guzzle an empty/null stream.");
         try (var reader = new BufferedReader(new InputStreamReader(stream))) {
-            content.addAll(reader.lines().collect(Collectors.toList()));
+            content.addAll(reader.lines().toList());
         } catch (IOException exception) {
             throw new CommandException(exception);
         } finally {
