@@ -76,7 +76,7 @@ class SeleniumService {
 
         var builder = ExternalProcess.builder().command("java", Stream.concat(javaFlags, Stream.concat(
             Stream.of("-jar", serverJar, mode, "--port", String.valueOf(port), "--selenium-manager", "true"),
-            Stream.of(extraFlags))).collect(Collectors.toList()))
+            Stream.of(extraFlags))).toList())
                 .copyOutputTo(System.err);
 
         if (Platform.getCurrent().is(Platform.WINDOWS)) {
