@@ -722,7 +722,7 @@ public interface Page {
     }
 
     private List<String> getValues(Object locator, Function<WebElement, String> function) {
-        return findAll(locator).stream().map(function).collect(Collectors.toList());
+        return findAll(locator).stream().map(function).toList();
     }
 
     /**
@@ -818,7 +818,7 @@ public interface Page {
         return getDriver().manage().getCookies()
                 .stream()
                 .map(Cookie::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
